--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Vue + TS</title>
+    <title>TREM Tauri</title>
     <script src="http://localhost:8098"></script>
   </head>
 
