--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TREM Tauri</title>
+    <script src="http://localhost:8098"></script>
   </head>
 
   <body>
