--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TREM Tauri</title>
-    <script src="http://localhost:8098"></script>
   </head>
 
   <body>
     <div id="app"></div>
+    <svg id="svg-defs">
+      <defs>
+        <radialGradient id="warn-gradient">
+          <stop offset="0%" style="stop-color: rgba(255 165 0 / 1%);" />
+          <stop offset="100%" style="stop-color: rgba(255 165 0 / 20%);" />
+        </radialGradient>
+        <radialGradient id="alert-gradient">
+          <stop offset="0%" style="stop-color: rgba(255 0 0 / 1%);" />
+          <stop offset="100%" style="stop-color: rgba(255 0 0 / 20%);"/>
+        </radialGradient>
+        <radialGradient id="trem-eew-gradient">
+          <stop offset="0%" style="stop-color: rgba(124 169 35 / 1%);" />
+          <stop offset="100%" style="stop-color: rgba(124 169 35 / 20%);" />
+        </radialGradient>
+      </defs>
+    </svg>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
