--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
       <defs>
         <radialGradient id="warn-gradient">
           <stop offset="0%" style="stop-color: rgba(255 165 0 / 1%);" />
+          <stop offset="50%" style="stop-color: rgba(255 165 0 / 5%);" />
           <stop offset="100%" style="stop-color: rgba(255 165 0 / 20%);" />
         </radialGradient>
         <radialGradient id="alert-gradient">
           <stop offset="0%" style="stop-color: rgba(255 0 0 / 1%);" />
+          <stop offset="50%" style="stop-color: rgba(255 0 0 / 5%);" />
           <stop offset="100%" style="stop-color: rgba(255 0 0 / 20%);"/>
         </radialGradient>
         <radialGradient id="trem-eew-gradient">
           <stop offset="0%" style="stop-color: rgba(124 169 35 / 1%);" />
+          <stop offset="50%" style="stop-color: rgba(124 169 35 / 5%);" />
           <stop offset="100%" style="stop-color: rgba(124 169 35 / 20%);" />
         </radialGradient>
       </defs>
