--- a/index.html
+++ b/index.html
@@ -1,32 +1,14 @@
 <!doctype html>
-<html lang="zh-Hant">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TREM Tauri</title>
+    <title>Tauri + Vue + TS</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <svg id="svg-defs">
-      <defs>
-        <radialGradient id="warn-gradient">
-          <stop offset="0%" style="stop-color: rgba(255 165 0 / 1%);" />
-          <stop offset="50%" style="stop-color: rgba(255 165 0 / 5%);" />
-          <stop offset="100%" style="stop-color: rgba(255 165 0 / 20%);" />
-        </radialGradient>
-        <radialGradient id="alert-gradient">
-          <stop offset="0%" style="stop-color: rgba(255 0 0 / 1%);" />
-          <stop offset="50%" style="stop-color: rgba(255 0 0 / 5%);" />
-          <stop offset="100%" style="stop-color: rgba(255 0 0 / 20%);"/>
-        </radialGradient>
-        <radialGradient id="trem-eew-gradient">
-          <stop offset="0%" style="stop-color: rgba(124 169 35 / 1%);" />
-          <stop offset="50%" style="stop-color: rgba(124 169 35 / 5%);" />
-          <stop offset="100%" style="stop-color: rgba(124 169 35 / 20%);" />
-        </radialGradient>
-      </defs>
-    </svg>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
